// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - badge danger outline renders correctly 1`] = `
<jest>
  <span
    class="badge badge-outline-danger text-white"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge danger renders correctly 1`] = `
<jest>
  <span
    class="badge bg-danger text-white"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge dark outline renders correctly 1`] = `
<jest>
  <span
    class="badge badge-outline-dark text-white"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge dark renders correctly 1`] = `
<jest>
  <span
    class="badge bg-dark text-white"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge info outline renders correctly 1`] = `
<jest>
  <span
    class="badge badge-outline-info text-white"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge info renders correctly 1`] = `
<jest>
  <span
    class="badge bg-info text-white"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge light outline renders correctly 1`] = `
<jest>
  <span
    class="badge badge-outline-light text-dark"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge light renders correctly 1`] = `
<jest>
  <span
    class="badge bg-light text-dark"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge primary outline renders correctly 1`] = `
<jest>
  <span
    class="badge badge-outline-primary text-white"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge primary renders correctly 1`] = `
<jest>
  <span
    class="badge bg-primary text-white"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge renders correctly as a rounded pill 1`] = `
<jest>
  <span
    class="badge rounded-pill bg-primary text-white"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge renders correctly dismissible 1`] = `
<jest>
  <a
    class="badge dismissible bg-primary text-white"
    href="#"
    title="A simple badge!"
  >
    A simple badge!
    <span
      aria-hidden="true"
      class="icon--close"
    >
      <svg
        class="bi icon--s"
      >
        <use
          xlink:href="#x-lg"
        />
      </svg>
    </span>
  </a>
</jest>
`;

exports[`OE - badge renders correctly with a link 1`] = `
<jest>
  <a
    class="badge bg-primary text-white"
    href="http://example.com"
    title="A simple badge!"
  >
    A simple badge!
  </a>
</jest>
`;

exports[`OE - badge renders correctly with assistive text 1`] = `
<jest>
  <span
    class="badge bg-primary text-white"
  >
    <span
      class="visually-hidden"
    >
      An assistive text
    </span>
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge secondary outline renders correctly 1`] = `
<jest>
  <span
    class="badge badge-outline-secondary text-white"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge secondary renders correctly 1`] = `
<jest>
  <span
    class="badge bg-secondary text-white"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge success outline renders correctly 1`] = `
<jest>
  <span
    class="badge badge-outline-success text-white"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge success renders correctly 1`] = `
<jest>
  <span
    class="badge bg-success text-white"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge warning outline renders correctly 1`] = `
<jest>
  <span
    class="badge badge-outline-warning text-dark"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge warning renders correctly 1`] = `
<jest>
  <span
    class="badge bg-warning text-dark"
  >
    A simple badge!
  </span>
</jest>
`;
